added jwt authentication
